<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadPrincipal">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_horizontal_actividad"
        android:layout_marginTop="@dimen/margen_vertical_actividad"
        android:layout_marginRight="@dimen/margen_horizontal_actividad"
        android:layout_marginBottom="@dimen/margen_vertical_actividad"
        tools:ignore="UselessParent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vistaRecicladaVehiculos"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnIngresarVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Ingresar Vehiculo"/>
    </RelativeLayout>

</LinearLayout>