...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            >

            <Button
                android:id="@+id/btn_cobrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cobrar_parqueadero" />

        </RelativeLayout>

...
